--- a/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
+++ b/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
@@ -151,8 +151,8 @@
                         <i class="material-icons">more_horiz</i>
                     </a>
                     <a class="btn-floating yellow waves-effect waves-light tooltipped btn modal-trigger"
-                       data-position="top" data-delay="50" data-tooltip="上传新图片/视频" onclick="openUploadModal()"
-                       href="#upload-new-image-or-video">
+                       data-position="top" data-delay="50" data-tooltip="上传新图片/视频"
+                       th:onclick="'javascript:openUploadModal(\''+${item.id}+'\')'" href="#upload-new-image-or-video">
                         <i class="material-icons">file_upload</i>
                     </a>
                     <a class="btn-floating green waves-effect waves-light tooltipped"
@@ -173,8 +173,8 @@
                         <i class="material-icons">more_horiz</i>
                     </a>
                     <a class="btn-floating yellow waves-effect waves-light tooltipped btn modal-trigger"
-                       data-position="top" data-delay="50" data-tooltip="上传新图片/视频" onclick="openUploadModal()"
-                       href="#upload-new-image-or-video">
+                       data-position="top" data-delay="50" data-tooltip="上传新图片/视频"
+                       th:onclick="'javascript:openUploadModal(\''+${item.id}+'\')'" href="#upload-new-image-or-video">
                         <i class="material-icons">file_upload</i>
                     </a>
                     <br/>
@@ -270,8 +270,9 @@
     </div>
 
     <div id="upload-new-image-or-video" class="modal modal-fixed-footer">
-        <form id="upload-image-or-video-form" th:action="@{${adminPath}+'/advertisement/uploadMedia'}" method="post"
-              enctype="multipart/form-data" onsubmit="return uploadImageOrVideo();">
+        <form id="upload-image-or-video-form" method="post" enctype="multipart/form-data" action="#"
+              onsubmit="return uploadImageOrVideo();">
+            <input id="upload-target-id" type="hidden"/>
             <div class="modal-content">
                 <h4>上传</h4>
                 <div class="col s12 m12 l12">
@@ -350,13 +351,13 @@
             url: url,
             type: "GET",
             success: function (data) {
-                $("#detail-item-id").text(data.ad.id);
-                $("#detail-item-name").text(data.ad.name);
-                $("#detail-item-machine-id").text(data.machine);
-                $("#detail-item-time").text(data.ad.time);
-                $("#detail-item-add-time").text(data.ad.addTime);
+                $("#detail-item-id").text(data['ad'].id);
+                $("#detail-item-name").text(data['ad'].name);
+                $("#detail-item-machine-id").text(data['machine']);
+                $("#detail-item-time").text(data['ad'].time);
+                $("#detail-item-add-time").text(data['ad'].addTime);
                 $("#detail-item-media").html();
-                $("#detail-item-remark").text(data.ad.remark);
+                $("#detail-item-remark").text(data['ad'].remark);
             },
             error: function () {
             }
@@ -369,13 +370,18 @@
             Materialize.toast("没有选择文件，该广告的图片/视频没有更新。", 5000);
             return false;
         } else {
+            var id = $("#upload-target-id").val();
+            var url = '[[${adminPath}]]' + '/advertisement/uploadMedia/' + id;
+            $("#upload-image-or-video-form").attr('action', url);
+            $("#upload-image-or-video-form").submit();
             return true;
         }
     }
 
-    function openUploadModal() {
+    function openUploadModal(id) {
         $("#new-file").val(null);
         $("#url").val(null);
+        $("#upload-target-id").val(id);
     }
 
     function prepareForDeleting(id, name) {
