--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineList.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineList.html
@@ -10,6 +10,16 @@
     <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
     <title>广告机 - 广告机管理后台</title>
 </head>
+
+<!--/* <editor-fold desc="define"> */-->
+<!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
+<!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
+<!--/*@thymesVar id="page" type="com.github.pagehelper.PageInfo<com.xmlan.machine.module.advertisementMachine.entity.AdvertisementMachine>"*/-->
+<!--/*@thymesVar id="name" type="java.lang.String"*/-->
+<!--/*@thymesVar id="codeNumber" type="java.lang.String"*/-->
+<!--/*@thymesVar id="addTime" type="java.lang.String"*/-->
+<!--/* </editor-fold> */-->
+
 <body>
 <header>
     <nav style="background-color: #37474f;z-index: 1;">
@@ -57,12 +67,7 @@
         </div>
     </nav>
 </header>
-<!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
-<!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
-<!--/*@thymesVar id="page" type="com.github.pagehelper.PageInfo<com.xmlan.machine.module.advertisementMachine.entity.AdvertisementMachine>"*/-->
-<!--/*@thymesVar id="name" type="java.lang.String"*/-->
-<!--/*@thymesVar id="codeNumber" type="java.lang.String"*/-->
-<!--/*@thymesVar id="addTime" type="java.lang.String"*/-->
+
 <main>
     <div id="main-content" class="container">
         <h5 class="title">广告机列表</h5>
