--- a/src/main/webapp/WEB-INF/templates/user/userList.html
+++ b/src/main/webapp/WEB-INF/templates/user/userList.html
@@ -10,8 +10,18 @@
     <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
     <title>用户 - 广告机管理后台</title>
 </head>
+
+<!--/* <editor-fold desc="define"> */-->
 <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
 <!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
+<!--/*@thymesVar id="page" type="com.github.pagehelper.PageInfo<com.xmlan.machine.module.user.entity.User>"*/-->
+<!--/*@thymesVar id="roleList" type="java.util.List<com.xmlan.machine.module.role.entity.Role>"*/-->
+<!--/*@thymesVar id="username" type="java.lang.String"*/-->
+<!--/*@thymesVar id="authname" type="java.lang.String"*/-->
+<!--/*@thymesVar id="addTime" type="java.lang.String"*/-->
+<!--/*@thymesVar id="roleID" type="java.lang.String"*/-->
+<!--/* </editor-fold> */-->
+
 <body>
 <header>
     <nav style="background-color: #37474f;z-index: 1;">
@@ -59,14 +69,6 @@
         </div>
     </nav>
 </header>
-<!--/*@thymesVar id="page" type="com.github.pagehelper.PageInfo<com.xmlan.machine.module.user.entity.User>"*/-->
-<!--/*@thymesVar id="dropdownRoleList" type="java.util.List<com.xmlan.machine.module.role.entity.Role>"*/-->
-
-<!--/*@thymesVar id="username" type="java.lang.String"*/-->
-<!--/*@thymesVar id="authname" type="java.lang.String"*/-->
-<!--/*@thymesVar id="addTime" type="java.lang.String"*/-->
-<!--/*@thymesVar id="roleID" type="java.lang.String"*/-->
-<!--/*@thymesVar id="roleName" type="java.lang.String"*/-->
 
 <main>
     <div id="main-content" class="container">
@@ -75,7 +77,6 @@
             <li class="divider"></li>
         </ul>
 
-        <!--/* <editor-fold desc="search box"> */-->
         <div id="search-box">
             <form th:action="@{${adminPath}+'/user/list/1'}" method="post">
                 <ul class="collapsible popout" data-collapsible="accordion">
@@ -96,16 +97,16 @@
                                     </div>
                                     <div class="input-field col s6 m3 l3">
                                         <input id="addTime" name="addTime" th:value="${addTime}" type="text"
-                                               class="date-picker"
-                                               placeholder="选择日期"/>
+                                               class="date-picker" placeholder="选择日期"/>
                                         <label for="addTime">按加入时间</label>
                                     </div>
                                     <div class="input-field col s6 m3 l3">
                                         <select id="roleID" name="roleID">
-                                            <option th:value="${roleID}" th:text="${roleName}"
-                                                    disabled="disabled" selected="selected"></option>
+                                            <option th:each="item:${roleList}" th:value="*{item.id}"
+                                                    th:text="*{item.name}" th:if="${item.id==roleID}"
+                                                    selected="selected"></option>
                                             <option value="-1">不选择</option>
-                                            <option th:each="item : ${dropdownRoleList}" th:value="*{item.id}"
+                                            <option th:each="item:${roleList}" th:value="*{item.id}"
                                                     th:text="*{item.name}"></option>
                                         </select>
                                         <label for="roleID">按角色</label>
@@ -125,10 +126,8 @@
                 </ul>
             </form>
         </div>
-        <!--/* </editor-fold> */-->
 
-        <!--/* <editor-fold desc="table main content"> */-->
-        <table class="highlight responsive-table">
+        <table id="table-main-content" class="highlight responsive-table">
             <thead>
             <tr>
                 <th width="10%">用户名</th>
@@ -141,11 +140,11 @@
             </tr>
             </thead>
             <tbody class="card">
-            <tr th:each="item : ${page.list}">
+            <tr th:each="item:${page.list}">
                 <td th:text="*{item.username}">username</td>
                 <td th:text="*{item.authname}">authname</td>
                 <td th:text="*{item.phone}">phone</td>
-                <th:block th:each="role : ${dropdownRoleList}">
+                <th:block th:each="role:${roleList}">
                     <td th:if="${item.roleID==role.id}" th:text="*{role.name}"></td>
                 </th:block>
                 <td th:text="*{item.address}">address</td>
@@ -197,18 +196,14 @@
             </tr>
             </tbody>
         </table>
-        <!--/* </editor-fold> */-->
 
-        <!--/* <editor-fold desc="add button"> */-->
         <div id="fixed-add-btn" class="fixed-action-btn">
             <a class="btn-floating btn-large waves-effect waves-light blue" th:href="@{${adminPath}+'/user/form'}">
                 <i class="large material-icons">add</i>
             </a>
         </div>
-        <!--/* </editor-fold> */-->
 
-        <!--/* <editor-fold desc="pagination"> */-->
-        <div class="center">
+        <div id="pagination-div" class="center">
             <ul class="pagination">
                 <li th:if="${!page.hasPreviousPage}" class="disabled">
                     <a href="#"><i class="material-icons">chevron_left</i></a>
@@ -237,37 +232,28 @@
                 </li>
             </ul>
         </div>
-        <!--/* </editor-fold> */-->
     </div>
 
     <!-- <editor-fold desc="Modal"> -->
     <div id="detail-modal" class="modal modal-fixed-footer">
         <div class="modal-content">
             <h4>详情</h4>
-            <div class="row">
-                <div class="col s12 m6 l6">
-                    <h6>用户编号</h6>
-                    <p id="detail-item-id">id</p>
-                    <h6>用户名</h6>
-                    <p id="detail-item-username">username</p>
-                    <h6>登录名</h6>
-                    <p id="detail-item-authname">authname</p>
-                </div>
-                <div class="col s12 m6 l6">
-                    <h6>联系电话</h6>
-                    <p id="detail-item-phone">phone</p>
-                    <h6>加入时间</h6>
-                    <p id="detail-item-add-time">addTime</p>
-                    <h6>角色</h6>
-                    <p id="detail-item-role">roleID -> role.name</p>
-                </div>
-                <div class="col s12 m12 l12">
-                    <h6>地址</h6>
-                    <p id="detail-item-address">address</p>
-                    <h6>备注</h6>
-                    <p id="detail-item-remark">remark</p>
-                </div>
-            </div>
+            <h6 class="green-text text-darken-2">用户编号</h6>
+            <p id="detail-item-id">id</p>
+            <h6 class="green-text text-darken-2">用户名</h6>
+            <p id="detail-item-username">username</p>
+            <h6 class="green-text text-darken-2">登录名</h6>
+            <p id="detail-item-authname">authname</p>
+            <h6 class="green-text text-darken-2">联系电话</h6>
+            <p id="detail-item-phone">phone</p>
+            <h6 class="green-text text-darken-2">加入时间</h6>
+            <p id="detail-item-add-time">addTime</p>
+            <h6 class="green-text text-darken-2">角色</h6>
+            <p id="detail-item-role">roleID -> role.name</p>
+            <h6 class="green-text text-darken-2">地址</h6>
+            <p id="detail-item-address">address</p>
+            <h6 class="green-text text-darken-2">备注</h6>
+            <p id="detail-item-remark">remark</p>
         </div>
         <div class="modal-footer">
             <a href="#" class="modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
