--- a/src/main/webapp/WEB-INF/templates/role/roleForm.html
+++ b/src/main/webapp/WEB-INF/templates/role/roleForm.html
@@ -10,8 +10,13 @@
     <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
     <title>编辑角色 - 广告机管理后台</title>
 </head>
+
+<!--/* <editor-fold desc="define"> */-->
 <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
 <!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
+<!--/*@thymesVar id="role" type="com.xmlan.machine.module.role.entity.Role"*/-->
+<!--/* </editor-fold> */-->
+
 <body>
 <header>
     <nav style="background-color: #37474f;z-index: 1;">
@@ -59,7 +64,7 @@
         </div>
     </nav>
 </header>
-<!--/*@thymesVar id="role" type="com.xmlan.machine.module.role.entity.Role"*/-->
+
 <main>
     <div id="main-content" class="container">
         <h5 class="title">
